harmonize the title in the app

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -125,7 +125,7 @@
       <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 mt-5">
         <div class="homepage-card">
           <div class="homepage-card-title">
-            <h2>IMPORT</h2>
+            <h4><strong>IMPORT</strong></h4>
           </div>
           <div class="homepage-card-pic">
             <%= image_tag("upload.png", height: 32, width: 32, alt: "upload") %>
@@ -138,7 +138,7 @@
       <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 mt-5">
         <div class="homepage-card">
           <div class="homepage-card-title">
-            <h2>BROWSE</h2>
+            <h4><strong>BROWSE</strong></h4>
           </div>
           <div class="homepage-card-pic">
             <%= image_tag("zoom.png", height: 32, width: 32, alt: "zoom") %>
@@ -151,7 +151,7 @@
       <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 mt-5">
         <div class="homepage-card">
           <div class="homepage-card-title">
-            <h2>LEARN</h2>
+            <h4><strong>LEARN</strong></h4>
           </div>
           <div class="homepage-card-pic">
             <%= image_tag("bulb.png", height: 32, width: 32, alt: "bulb") %>
@@ -164,7 +164,7 @@
       <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 mt-5">
         <div class="homepage-card">
           <div class="homepage-card-title">
-            <h2>REMEMBER</h2>
+            <h4><strong>REMEMBER</strong></h4>
           </div>
           <div class="homepage-card-pic">
             <%= image_tag("calendar.png", height: 32, width: 32, alt: "calendar") %>
