--- a/app/assets/stylesheets/pages/_add_plant_new.scss
+++ b/app/assets/stylesheets/pages/_add_plant_new.scss
@@ -21,24 +21,25 @@
   padding-left: 20px;
 }
 
-.myplantcard-name-plant {
-  width: 50% !important;
-  height: 40px !important;
-  background-color: $white-green;
-  box-shadow: 0.2px 0.9px 0.9px 0.9px $dark-gray-green;
+.myplantcard-add {
+  width:80%;
+  height: 355px;
+  // background-color: $white-green;
+  // box-shadow: 0.2px 0.9px 0.9px 0.9px $dark-gray-green;
   margin: auto;
-  border-radius: 6px;
-  border: none !important;
+  border-radius: 4px;
+  // border: none !important;
   transition: transform .5s;
   &:hover {
     text-decoration: none !important;
     transform: scale(1.04);
   }
   img {
-    height: 65%;
+    height: 75%;
     object-fit: cover;
   }
 }
+
 
 
 .name-plant-button {
