added the phone number in the schema and in the form

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -36,9 +36,9 @@
             </div>
             <div class="row">
               <div class="form-item col-12">
-                <%= f.input :first_name,
+                <%= f.input :phone,
                           required: true,
-                          input_html: { autocomplete: "first_name" } %>
+                          input_html: { autocomplete: "phone" } %>
               </div>
             </div>
             <div class="row">
