--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -61,6 +61,7 @@
             </div>
           </div>
           <%= f.button :submit, "Sign up", class:"btn custombtn btn-block" %>
+        </div>
         <% end %>
         <div class="flex-column">
           <div class="col-12 d-flex justify-content-center" id="sign-in-paragraph">Already have an account?</div>
