--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -18,6 +18,24 @@
   }
 }
 
+.firstplantbtn {
+  background-color: $mid-green;
+  color: $white-green;
+  border-radius: 4px !important;
+  text-decoration: none;
+  cursor: pointer;
+  font-size: 14px !important;
+  font-family: $links;
+  padding: 8px 20px;
+  &:hover {
+    background-color: $white-green;
+    border: 1px solid $mid-green;
+    color: $mid-green;
+    transition-duration: 0.3s;
+    text-decoration: none;
+  }
+}
+
 .formbtn {
   background-color: $white-green;
   color: $mid-green;
