reorganize the btn file

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -158,3 +158,51 @@ margin-bottom: 2px;
   text-decoration: none;
   }
 }
+
+#submit-btn-modal {
+  background-color: $light-green;
+  color: $white-green;
+  border: 3px solid $light-green;
+  padding: 0px;
+  text-decoration: none;
+  cursor: pointer;
+  width: 432px !important;
+  font-size: 20px !important;
+  font-family: $links;
+  text-align: center;
+  margin-top: 2px;
+  margin-left: 2px;
+  margin-right: 2px;
+  margin-bottom: 2px;
+  &:hover {
+    background-color: $white-green;
+    border: 3px solid $light-green;
+    color: $light-gray-green;
+    transition-duration: 0.4s;
+    text-decoration: none;
+  }
+}
+
+#password-recovery-btn-modal {
+  margin-top: 16px;
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+
+#sign-in-btn {
+  background: none;
+  border: none;
+  padding: 0;
+  color: white;
+  &:hover {
+    transition-duration: 0.1s;
+    color: $light-green;
+    text-decoration: underline;
+  }
+}
+
+#sign-up-btn {
+  padding-top: 16px;
+}
