add the plant avatar files in the index

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -7,6 +7,7 @@
 @import "modal";
 @import "errors";
 @import "myplantcard";
+@import "plant-avatar";
 @import "error_pages";
 @import "slogan";
 @import "sign";
