--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,7 +12,7 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
-@import "components/button";
+// @import "components/button";
 @import "components/banner";
 @import "components/footer";
 
