--- a/app/assets/stylesheets/components/buttons/_btnmodal.scss
+++ b/app/assets/stylesheets/components/buttons/_btnmodal.scss
@@ -9,10 +9,7 @@
   font-size: 20px !important;
   font-family: $links;
   text-align: center;
-  margin-top: 2px;
-  margin-left: 2px;
-  margin-right: 2px;
-  margin-bottom: 2px;
+  margin: 2px;
   &:hover {
     background-color: $white-green;
     border: 3px solid $light-green;
