--- a/app/assets/stylesheets/components/buttons/_formbtn.scss
+++ b/app/assets/stylesheets/components/buttons/_formbtn.scss
@@ -5,7 +5,7 @@
   text-decoration: none;
   cursor: pointer;
   width: 150px;
-  height: 40px !important;
+  // height: 40px !important;
   font-size: 14px !important;
   font-family: $links;
   height: 32px !important;
