--- a/app/assets/stylesheets/components/_error_pages.scss
+++ b/app/assets/stylesheets/components/_error_pages.scss
@@ -5,24 +5,19 @@
     background-size: cover;
 }
 
-.error-writings {
-  color: white;
-}
-
 .error-page-container {
   height: 100vh;
 }
 
-#sorry {
-  font-size: 146px;
-}
-
-#error-line-1 {
-  font-size: 32px;
-}
-
-#error-line-2 {
-  font-size: 32px;
+.error-writings {
+  text-align: center;
+  h1 {
+    font-size: 4em;
+    color: white;
+  }
+  p {
+    color: white;
+  }
 }
 
 .link-to-homepage {
