--- a/app/views/errors/internal_server_error.html.erb
+++ b/app/views/errors/internal_server_error.html.erb
@@ -1,16 +1,8 @@
 <div class="template-body">
-  <div class="container error-page-container d-flex align-items-center flex-column justify-content-center">
-     <div class="row ">
-    <div class="col-12">
-      <h1 class ="error-writings" id="sorry">SORRY</h1>
-    </div>
-    </div>
-    <div class="row ">
-      <div class="col-12">
-        <p class="error-writings" id="error-line-1">We couldn't find that page</p>
-      </div>
-    </div>
-    <div class="row">
+  <div class="container error-page-container d-flex align-items-center justify-content-center">
+    <div class="error-writings">
+      <h1>SORRY</h1>
+      <p>We couldn't find that page</p><br>
       <%= link_to "My Chinampa's homepage", root_path, class:'btn errorbtn' %>
     </div>
   </div>
