--- a/app/views/errors/unprocessable_entity.html.erb
+++ b/app/views/errors/unprocessable_entity.html.erb
@@ -1,21 +1,8 @@
 <div class="template-body">
-  <div class="container error-page-container d-flex align-items-center flex-column justify-content-center">
-     <div class="row ">
-    <div class="col-12">
-      <h1 class ="error-writings" id="sorry">SORRY</h1>
-    </div>
-    </div>
-    <div class="row ">
-      <div class="col-12">
-        <p class="error-writings" id="error-line-1">The change you wanted was rejected.</p>
-      </div>
-    </div>
-    <div class="row ">
-      <div class="col-12">
-        <p class="error-writings" id="error-line-1">Maybe you tried to change something you didn't have access to.</p>
-      </div>
-    </div>
-    <div class="row">
+  <div class="container error-page-container d-flex align-items-center justify-content-center">
+    <div class="error-writings">
+      <h1>SORRY</h1>
+      <p>The change you wanted was rejected.</p><br>
       <%= link_to "My Chinampa's homepage", root_path, class: 'link-to-homepage btn errorbtn' %>
     </div>
   </div>
