refactor HTML + cleaned the css of the class

--- a/app/views/errors/not_found.html.erb
+++ b/app/views/errors/not_found.html.erb
@@ -4,7 +4,7 @@
       <h1>SORRY</h1>
       <p>The page you were looking for doesn't exist.</p>
       <p>You may have mistyped the address or the page may have moved.</p><br>
-      <%= link_to "My Chinampa's homepage", root_path, class: 'link-to-homepage btn errorbtn' %>
+      <%= link_to "My Chinampa's homepage", root_path, class: 'btn errorbtn' %>
     </div>
   </div>
 </div>
