--- a/app/views/errors/unprocessable_entity.html.erb
+++ b/app/views/errors/unprocessable_entity.html.erb
@@ -3,7 +3,7 @@
     <div class="error-writings">
       <h1>SORRY</h1>
       <p>The change you wanted was rejected.</p><br>
-      <%= link_to "My Chinampa's homepage", root_path, class: 'link-to-homepage btn errorbtn' %>
+      <%= link_to "My Chinampa's homepage", root_path, class: 'btn errorbtn' %>
     </div>
   </div>
 </div>
