--- a/app/assets/stylesheets/pages/_add_plant_new.scss
+++ b/app/assets/stylesheets/pages/_add_plant_new.scss
@@ -1,34 +1,31 @@
-.name-plant-container {
-  background-image:
-  linear-gradient(to bottom, rgba(183, 216, 185, 0.137), rgba(131, 184, 131, 0.164)),
-  url('https://images.unsplash.com/photo-1524116458090-9521cd04f38d?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=634&q=80');
-  background-position: center;
-  background-size: cover;
-  height: 180px;
-  box-shadow: 2px 2.2px 2.2px $dark-gray-green;
-  margin-bottom: 50px;
-  justify-content: center;
-  align-items: center;
-}
+// .name-plant-container {
+//   background-image:
+//   linear-gradient(to bottom, rgba(183, 216, 185, 0.137), rgba(131, 184, 131, 0.164)),
+//   url('https://images.unsplash.com/photo-1524116458090-9521cd04f38d?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=634&q=80');
+//   background-position: center;
+//   background-size: cover;
+//   height: 180px;
+//   box-shadow: 2px 2.2px 2.2px $dark-gray-green;
+//   margin-bottom: 50px;
+//   justify-content: center;
+//   align-items: center;
+// }
 
-.name-plant-text {
-  color:rgb(255, 255, 255);
-  opacity: 80%;
-  font-family: $titles;
-  font-weight: 1000;
-  font-size: 75px;
-  padding-top: 20px;
-  padding-left: 20px;
-}
+// .name-plant-text {
+//   color:rgb(255, 255, 255);
+//   opacity: 80%;
+//   font-family: $titles;
+//   font-weight: 1000;
+//   font-size: 75px;
+//   padding-top: 20px;
+//  padding-left: 20px;
+// }
 
 .myplantcard-add {
   width:80%;
   height: 355px;
-  // background-color: $white-green;
-  // box-shadow: 0.2px 0.9px 0.9px 0.9px $dark-gray-green;
   margin: auto;
   border-radius: 4px;
-  // border: none !important;
   transition: transform .5s;
   &:hover {
     text-decoration: none !important;
@@ -41,30 +38,29 @@
 }
 
 
-
-.name-plant-button {
-background-color: $white-green;
-color: $mid-green;
-border: 3px solid $light-green;
-border-radius: 12px !important;
-padding: 5px;
-text-decoration: none;
-cursor: pointer;
-width: 190px !important;
-height: 45px !important;
-font-size: 15px !important;
-font-family: $links;
-text-align: center;
-margin-top: 20px;
-margin-left: 2px;
-margin-right: 2px;
-margin-bottom: 2px;
-&:hover {
-  background-color: $light-gray-green;
-  border: 3px solid $light-green;
-  color: $dark-green;
-  transition-duration: 0.7s;
-  text-decoration: none;
-}
-}
+// .name-plant-button {
+// background-color: $white-green;
+// color: $mid-green;
+// border: 3px solid $light-green;
+// border-radius: 12px !important;
+// padding: 5px;
+// text-decoration: none;
+// cursor: pointer;
+// width: 190px !important;
+// height: 45px !important;
+// font-size: 15px !important;
+// font-family: $links;
+// text-align: center;
+// margin-top: 20px;
+// margin-left: 2px;
+// margin-right: 2px;
+// margin-bottom: 2px;
+// &:hover {
+//   background-color: $light-gray-green;
+//   border: 3px solid $light-green;
+//   color: $dark-green;
+//   transition-duration: 0.7s;
+//   text-decoration: none;
+//  }
+// }
 
