clean the home sccss and the html files

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -132,21 +132,16 @@
     </div>
   <% end %>
 </div>
-
-
-<div class="custom-container">
-  <div class="homepage-advertising">
+<div class="homepage-advertising">
     <div class="row">
       <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 mt-5">
         <div class="homepage-card">
           <div class="homepage-card-title">
             <h4><strong>IMPORT</strong></h4>
-          </div>
-          <div class="homepage-card-pic">
             <%= image_tag("upload.png", height: 32, width: 32, alt: "upload") %>
           </div>
           <div class="homepage-card-text">
-            <p><strong>Import all your plants</strong> directly on your catalogue. Access it through an user user-friendly interface.<p>
+            <p><strong><br>Import all your plants</strong> directly on your catalogue. Access it through an user user-friendly interface.<p>
           </div>
         </div>
       </div>
@@ -154,12 +149,10 @@
         <div class="homepage-card">
           <div class="homepage-card-title">
             <h4><strong>BROWSE</strong></h4>
-          </div>
-          <div class="homepage-card-pic">
             <%= image_tag("zoom.png", height: 32, width: 32, alt: "zoom") %>
           </div>
           <div class="homepage-card-text">
-            <p>Use our <strong>huge database of plants</strong> to easily find some useful informations about your favorite vegetals.</p>
+            <p><br>Use our <strong>huge database of plants</strong> to easily find some useful informations about your favorite vegetals.</p>
           </div>
         </div>
       </div>
@@ -167,12 +160,10 @@
         <div class="homepage-card">
           <div class="homepage-card-title">
             <h4><strong>LEARN</strong></h4>
-          </div>
-          <div class="homepage-card-pic">
             <%= image_tag("bulb.png", height: 32, width: 32, alt: "bulb") %>
           </div>
           <div class="homepage-card-text">
-            <p>Use our selection of Youtube videos to <strong>learn the basics of plant caring</strong>. Easily accesible for beginners.</p>
+            <br><p>Use our selection of Youtube videos to <strong>learn the basics of plant caring</strong>. Easily accesible for beginners.</p>
           </div>
         </div>
       </div>
@@ -180,16 +171,14 @@
         <div class="homepage-card">
           <div class="homepage-card-title">
             <h4><strong>REMEMBER</strong></h4>
-          </div>
-          <div class="homepage-card-pic">
             <%= image_tag("calendar.png", height: 32, width: 32, alt: "calendar") %>
           </div>
           <div class="homepage-card-text">
-            <p>Never loose a plant anymore ! <strong>Receive SMS for everything you need to do</strong> to maintain your plants healthy</p>
+            <br><p>Never loose a plant anymore ! <strong>Receive SMS for everything you need to do</strong> to maintain your plants healthy</p>
           </div>
         </div>
       </div>
     </div>
-  </div>
 </div>
+
 
